--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exklusive Küchenlösungen von Foster - Küchenstudio Bergheim</title>
+    <title>MGS Taps – Luxus-Wasserhähne und Badaccessoires vom Partner des Küchenstudios Bergheim</title>
     <meta
       name="description"
-      content="Entdecken Sie exklusive Küchenlösungen von Foster im Küchenstudio Bergheim. Hochwertige Edelstahlspülen, Mischbatterien und innovative Küchentechnologie für Ihre Traumküche."
+      content="Entdecken Sie MGS Taps, Partner des Küchenstudios Bergheim, für exklusive Luxus-Wasserhähne, Wand-Mischer und innovative Badaccessoires. Robuste Edelstahlprodukte und einzigartige Oberflächen für Ihr Bad."
     />
     <meta
       name="keywords"
-      content="Foster Küchen, Edelstahlspülen, Mischbatterien, Bergheim, exklusive Küchenlösungen, hochwertige Küchen, moderne Küchen"
+      content="MGS Taps, Partner Küchenstudio Bergheim, Wand-Mischer, Luxus Wasserhähne, Badaccessoires, PVD Oberflächen, Edelstahl, mattes Bronze, Hellgold, MGS MB278N, hochwertige Badarmaturen"
     />
-    <meta property="og:title" content="Exklusive Küchenlösungen von Foster – Küchenstudio Bergheim" />
+    <meta property="og:title" content="MGS Taps – Luxus-Wasserhähne und Badaccessoires vom Partner des Küchenstudios Bergheim" />
     <meta
       property="og:description"
-      content="Foster bietet innovative Küchenlösungen, die Design, Technologie und Nachhaltigkeit vereinen. Besuchen Sie das Küchenstudio Bergheim für Ihre Traumküche."
+      content="MGS Taps bietet hochwertige Badezimmerlösungen in Zusammenarbeit mit dem Küchenstudio Bergheim, einschließlich Wand-Mischer und luxuriösen Wasserhähnen in einzigartigen Oberflächen."
     />
-    <meta property="og:image" content="/images/foster-banner.jpg" />
-    <meta property="og:url" content="https://www.kuechenstudio-bergheim.at" />
+    <meta property="og:image" content="/images/mgs-taps-banner.jpg" />
+    <meta property="og:url" content="https://www.mgstaps.com" />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
