--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MGS Taps – Luxus-Wasserhähne und Badaccessoires vom Partner des Küchenstudios Bergheim</title>
+    <title>MGS Taps – Exklusive Wasserhähne und Badaccessoires im Küchenstudio Bergheim</title>
+
     <meta
       name="description"
       content="Entdecken Sie MGS Taps, Partner des Küchenstudios Bergheim, für exklusive Luxus-Wasserhähne, Wand-Mischer und innovative Badaccessoires. Robuste Edelstahlprodukte und einzigartige Oberflächen für Ihr Bad."
@@ -23,7 +24,8 @@
     <link rel="icon" href="/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&family=Karla:wght@300;400;500&display=swap" rel="stylesheet">
+
   </head>
   
   <body>
