--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MGS Taps – Exklusive Wasserhähne und Badaccessoires im Küchenstudio Bergheim</title>
+    <title>Miele – Exklusive Partner des Küchenstudio Bergheim für hochwertige Haushaltsgeräte</title>
 
     <meta
       name="description"
-      content="Entdecken Sie MGS Taps, Partner des Küchenstudios Bergheim, für exklusive Luxus-Wasserhähne, Wand-Mischer und innovative Badaccessoires. Robuste Edelstahlprodukte und einzigartige Oberflächen für Ihr Bad."
+      content="Miele, Partner des Küchenstudios Bergheim, bietet Ihnen hochwertige Haushaltsgeräte für Küche, Wäschepflege und Staubsaugen. Entdecken Sie exklusive Lösungen für Ihr Zuhause."
     />
     <meta
       name="keywords"
-      content="MGS Taps, Partner Küchenstudio Bergheim, Wand-Mischer, Luxus Wasserhähne, Badaccessoires, PVD Oberflächen, Edelstahl, mattes Bronze, Hellgold, MGS MB278N, hochwertige Badarmaturen"
+      content="Miele, Partner Küchenstudio Bergheim, hochwertige Haushaltsgeräte, Wäschepflege, Staubsauger, Küchenprodukte, Miele Design, Nachhaltigkeit, Miele Geräte, langlebige Geräte"
     />
-    <meta property="og:title" content="MGS Taps – Luxus-Wasserhähne und Badaccessoires vom Partner des Küchenstudios Bergheim" />
+    <meta property="og:title" content="Miele – Hochwertige Haushaltsgeräte im Küchenstudio Bergheim" />
     <meta
       property="og:description"
-      content="MGS Taps bietet hochwertige Badezimmerlösungen in Zusammenarbeit mit dem Küchenstudio Bergheim, einschließlich Wand-Mischer und luxuriösen Wasserhähnen in einzigartigen Oberflächen."
+      content="Miele ist ein vertrauenswürdiger Partner des Küchenstudios Bergheim. Entdecken Sie langlebige, effiziente Haushaltsgeräte und exzellentes Design für Ihre Küche, Wäschepflege und Staubsaugen."
     />
-    <meta property="og:image" content="/images/mgs-taps-banner.jpg" />
-    <meta property="og:url" content="https://www.mgstaps.com" />
+    <meta property="og:image" content="/images/miele-partner-banner.jpg" />
+    <meta property="og:url" content="https://www.miele.com" />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&family=Karla:wght@300;400;500&display=swap" rel="stylesheet">
-
   </head>
   
   <body>
